--- a/ebac_m13_bookstore/templates/hello_world.html
+++ b/ebac_m13_bookstore/templates/hello_world.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello, World!</title>
+    <title>Hello EBAC!</title>
 </head>
     <body>
-        <h1>Hello, World!</h1>
+        <h1>🚀 Automatic deploy is working!</h1>
+        <p>Se você está vendo esta página, o webhook do GitHub foi executado com sucesso.</p>
     </body>
 </html>
